Finished item specs

--- a/Asset Spec/sdg.unturned.dialogueasset, assembly-csharp.json
+++ b/Asset Spec/sdg.unturned.dialogueasset, assembly-csharp.json
@@ -121,7 +121,7 @@
                     "Key": "Prev",
                     "Type": "GuidOrId",
                     "ElementType": "SDG.Unturned.DialogueAsset, Assembly-CSharp",
-                    "DefaultValue": 0,
+                    "DefaultValue": "00000000000000000000000000000000",
                     "Description": "The GUID or short ID of the previous dialogue page of message #(Self.KeyGroups[0]). The player will be returned to this dialogue if no responses are available.",
                     "Docs": "https://docs.smartlydressedgames.com/en/stable/npcs/dialogue-asset.html#messages",
                     "Variable": "prevGuid"
@@ -215,7 +215,7 @@
                     "Key": "Dialogue",
                     "Type": "GuidOrId",
                     "ElementType": "SDG.Unturned.DialogueAsset, Assembly-CSharp",
-                    "DefaultValue": 0,
+                    "DefaultValue": "00000000000000000000000000000000",
                     "Description": "The dialogue to open after the player selects response @dialogue-responses.",
                     "Docs": "https://docs.smartlydressedgames.com/en/stable/npcs/dialogue-asset.html#responses",
                     "Variable": "dialogueGuid",
@@ -225,7 +225,7 @@
                     "Key": "Quest",
                     "Type": "GuidOrId",
                     "ElementType": "SDG.Unturned.QuestAsset, Assembly-CSharp",
-                    "DefaultValue": 0,
+                    "DefaultValue": "00000000000000000000000000000000",
                     "Description": "The quest to start after the player selects response @dialogue-responses.",
                     "Docs": "https://docs.smartlydressedgames.com/en/stable/npcs/dialogue-asset.html#responses",
                     "Variable": "questGuid",
@@ -235,7 +235,7 @@
                     "Key": "Vendor",
                     "Type": "GuidOrId",
                     "ElementType": "SDG.Unturned.VendorAsset, Assembly-CSharp",
-                    "DefaultValue": 0,
+                    "DefaultValue": "00000000000000000000000000000000",
                     "Description": "The vendor (shop) to open after the player selects response @dialogue-responses.",
                     "Docs": "https://docs.smartlydressedgames.com/en/stable/npcs/dialogue-asset.html#responses",
                     "Variable": "vendorGuid",
